fix: Font changes on smaller device
Footer container font was too big

--- a/media-queries.css
+++ b/media-queries.css
@@ -76,7 +76,7 @@
     }
 
     .footer-container {
-        font-size: 1.3rem;
+        font-size: 1.1rem;
         flex-direction: column;
         gap: 40px;
         align-items: center;
